--- a/javaWeb/dmm_person/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/dmm_person/src/main/webapp/WEB-INF/web.xml
@@ -51,118 +51,75 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-<!-- 	<filter>
-		<filter-name>CAS Single Sign Out Filter</filter-name>
-		<filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>CAS Single Sign Out Filter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!-- ==================== 单点登录开始 ================ -->
+	<!-- 该过滤器负责用户的认证工作，必须启用它 -->
 	<filter>
-		<filter-name>shiroFilter</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		<async-supported>true</async-supported>
+		<filter-name>CASFilter</filter-name>
+		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
-			<param-name>targetFilterLifecycle</param-name>
-			<param-value>true</param-value>
+			<param-name>casServerLoginUrl</param-name>
+			<param-value> http://ids.cumt.edu.cn/authserver/login</param-value>
+			<!--这里的server是服务端的地址-->
+		</init-param>
+		<init-param>
+			<param-name>serverName</param-name>
+			<param-value>业务系统域名 </param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>shiroFilter</filter-name>
+		<filter-name>CASFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-        <filter>
-        <filter-name>PermissUrlFilter</filter-name>
-        <filter-class>com.jhnu.framework.filter.PermissUrlFilter </filter-class>
-   </filter>
-   <filter-mapping>
-         <filter-name>PermissUrlFilter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping> -->
-   <filter>
-    <filter-name>CAS SLO Cluster Filter</filter-name>
-    <filter-class>com.jhnu.syspermiss.filter.CasSingleLogoutClusterFilter</filter-class>
-</filter>
-<filter-mapping>
-    <filter-name>CAS SLO Cluster Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-</filter-mapping>
-   <listener> 
-		<listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class> 
-	</listener>
-	
-    <filter>  
-        <filter-name>CAS Single Sign Out Filter</filter-name>  
-        <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>  
-    </filter>  
-   	<filter-mapping>  
-        <filter-name>CAS Single Sign Out Filter</filter-name>  
-        <url-pattern>/*</url-pattern>  
-    </filter-mapping> 
+	<!--[只需要添加获取用户姓名的对应jsp文件相对路径即可]-->
 
+	<!-- 该过滤器负责对Ticket的校验工作，必须启用它 -->
 	<filter>
-        <filter-name>CAS Authentication Filter</filter-name>
-        <filter-class> com.jhnu.syspermiss.filter.CASAuthenticationFilter</filter-class>
-        <init-param>
-            <param-name>renew</param-name>
-            <param-value>false</param-value>
-        </init-param>
-        <init-param>
-            <param-name>gateway</param-name>
-            <param-value>false</param-value>
-        </init-param>
-   </filter>
-         <!--负责Ticket校验-->
-   <filter>
-        <filter-name>CAS Validation Filter</filter-name>
-        <filter-class> com.jhnu.syspermiss.filter.Cas20ProxyReceivingTicketValidationFilter </filter-class>
+		<filter-name>CAS Validation Filter</filter-name>
+		<filter-class>
+			org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
+		<init-param>
+			<param-name>casServerUrlPrefix</param-name>
+			<param-value> http://ids.cumt.edu.cn/authserver/serviceValidate</param-value>
+		</init-param>
+		<init-param>
+			<param-name>serverName</param-name>
+			<param-value>业务系统域名</param-value>
+		</init-param>
+<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CAS Validation Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
-        <init-param>
-            <param-name>useSession</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>redirectAfterValidation</param-name>
-            <param-value>true</param-value>
-        </init-param>
-   </filter>
-   <filter>
-        <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
-        <filter-class> org.jasig.cas.client.util.HttpServletRequestWrapperFilter </filter-class>
-   </filter>
-   <filter>
-        <filter-name>CAS Assertion Thread Local Filter</filter-name>
-        <filter-class> org.jasig.cas.client.util.AssertionThreadLocalFilter </filter-class>
-   </filter>
-   
-   
-   <filter-mapping>
-         <filter-name>CAS Authentication Filter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   <filter-mapping>
-         <filter-name>CAS Validation Filter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   <filter-mapping>
-         <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   <filter-mapping>
-         <filter-name>CAS Assertion Thread Local Filter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   
-    <filter>
-        <filter-name>PermissUrlFilter</filter-name>
-        <filter-class> com.jhnu.syspermiss.filter.PermissUrlFilter </filter-class>
-   </filter>
-   <filter-mapping>
-         <filter-name>PermissUrlFilter</filter-name>
-         <url-pattern>/*</url-pattern>
-   </filter-mapping>
-   <!--  -->
+	<!-- 该过滤器负责实现HttpServletRequest请求的包裹，比如允许开发者通过HttpServletRequest的getRemoteUser()方法获得SSO登录用户的登录名，可选配置。 -->
+	<filter>
+		<filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+		<filter-class>
+			org.jasig.cas.client.util.HttpServletRequestWrapperFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- 该过滤器使得开发者可以通过org.jasig.cas.client.util.AssertionHolder
+来获取用户的登录名。
+
+比如AssertionHolder.getAssertion().getPrincipal().getName()。 -->
+	<filter>
+		<filter-name>CAS Assertion Thread Local Filter</filter-name>
+		<filter-class>org.jasig.cas.client.util.AssertionThreadLocalFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CAS Assertion Thread Local Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- =============== 单点登录结束 ================= -->
 	<jsp-config>
 		<taglib>
 			<taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
