--- a/jinghua/dmm_cas/src/main/resources/db.properties
+++ b/jinghua/dmm_cas/src/main/resources/db.properties
@@ -2,9 +2,11 @@
 #################数据源=base#####################
 dataSource.driver.base=oracle.jdbc.driver.OracleDriver
 dataSource.url.base=jdbc\:oracle\:thin\:@192.168.30.88\:1521\:ORCL
-#dataSource.url.base=jdbc\:oracle\:thin\:@localhost\:1521\:ORCL
 dataSource.username.base=dm
 dataSource.password.base=dm
+#dataSource.url.base=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:dm
+#dataSource.username.base=usr_dm
+#dataSource.password.base=usr_dm
 
 #########学校代码##############
 #school.code=ZZQY
