--- a/jinghua/dmm_person/src/main/resources/db.properties
+++ b/jinghua/dmm_person/src/main/resources/db.properties
@@ -1,15 +1,12 @@
 
 #################数据源=base#####################
 dataSource.driver.base=oracle.jdbc.driver.OracleDriver
-dataSource.url.base=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:DM
+#dataSource.url.base=jdbc\:oracle\:thin\:@192.168.30.88\:1521\:ORCL
+#dataSource.username.base=dm
+#dataSource.password.base=dm
+dataSource.url.base=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:dm
 dataSource.username.base=usr_dm
 dataSource.password.base=usr_dm
-
-#################æ°æ®æº=log#####################
-dataSource.driver.log=oracle.jdbc.driver.OracleDriver
-dataSource.url.log=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:DM
-dataSource.username.log=usr_dm_log
-dataSource.password.log=usr_dm_log
 
 #连接基础属性配置
 dataSource.maxActive=200
@@ -28,16 +25,5 @@ dataSource.logAbandoned=true
 dataSource.removeAbandoned=true
 #泄露的连接可以被删除的超时值, 单位秒。
 dataSource.removeAbandonedTimeout=180
-
-
-#neo4j数据库连接配置
-neo4jSource.url=http://192.168.200.101:7474/db/data
-neo4jSource.username=neo4j
-neo4jSource.password=123456
-
-#solr搜索引擎配置
-solr.url=http://192.168.200.101:18088/solr/menu
-
-
 
 
