--- a/jinghua/dmm_person/src/main/resources/permiss/sysConfig.properties
+++ b/jinghua/dmm_person/src/main/resources/permiss/sysConfig.properties
@@ -1,34 +1,47 @@
 #serverName 本项目外网访问地址
-sys.serverName=http://localhost:8088
+sys.serverName=http://localhost:8089
 #sys.serverName=http://sunweiguang.eicp.net
 
 #serverUrl 本项目外网访问地址
-sys.serverUrl=http://localhost:8088/dmm_person
+sys.serverUrl=http://localhost:8089/dmm_person
 #sys.serverUrl=http://sunweiguang.eicp.net/personal
-#serverUrl 集群其他项目访问地址
-sys.serverUrlNodes=http://localhost:9099/dmm_logistics,http://localhost:9098/dmm_logistics,http://localhost:9097/dmm_logistics
 
+#serverUrl 本项目外网访问地址集群
+sys.serverUrlNodes=http://localhost:8089/dmm_person,http://localhost:28080/dmm_logistics,http://localhost:38080/dmm_logistics
 
 #CAS 单点登录系统访问地址
 sys.casServerUrl=http://localhost:8080/dmm_cas
-#sys.casServerUrl=http://sun741289543.6655.la/cas
+#sys.casServerUrl=http://dm.haut.edu.cn:80/dmm_cas
 
 #CAS 单点登录系统登录地址
 sys.casServerLoginUrl=http://localhost:8080/dmm_cas/login
-#sys.casServerLoginUrl=http://sun741289543.6655.la/cas/login
+#sys.casServerLoginUrl=http://dm.haut.edu.cn:80/dmm_cas/login
 
-#CAS忽略拦截的路径(可以配置成正则表达式)
-sys.casIgnoreUrls=/test*,/wechat/*,/index.jsp,/teacher/bind*,/user/nopermi,/resource/*,/static/*,/common/*,/stu/*,/tea/*,/manage/*,/person/other/*
+#CAS忽略拦截的路径(不用登陆即可访问，可以配置成正则表达式)
+sys.casIgnoreUrls=/common/nopermiss,/resource/*,/static/*,/task/job/execute
 
+#权限忽略拦截的路径(需要登陆但不需要配权限即可访问，可以配置成正则表达式)
+sys.permissIgnoreUrls=/common/exportPage,/common/getData,/index.jsp,/index.html,/getphoto
+
+#网站系统首页
+sys.indexUrl=/index.jsp
 #没有权限跳转页面
 sys.noPermissUrl=/common/nopermiss
 
 #权限系统访问地址
-sys.dmmUrl=http://localhost:8080/dmm_sys/common/getDatas
+sys.dmmUrl=http://localhost:8088/dmm_sys
+
+#图片物理路径文件夹(格式为:".jpg")
+sys.photoPath=E:/dmm/photo
+#默认图片名（需在上述文件夹内）
+sys.defaultPhoto=default.jpg
 
 #################权限系统数据源=base 请确保加载相关驱动#####################
 permiss.driverName=oracle.jdbc.driver.OracleDriver
-permiss.url=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:DM
+#permiss.url=jdbc\:oracle\:thin\:@192.168.30.88\:1521\:ORCL
+#permiss.user=dm
+#permiss.password=dm
+permiss.url=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:dm
 permiss.user=usr_dm
 permiss.password=usr_dm
 #验证数据库连接是否健康
@@ -43,5 +56,6 @@ permiss.maxPool=100
 
 #权限数据源使用的sequence
 permiss.seqGenerator=ID_SEQ
+
 
 
