--- a/jinghua/dmm_person/src/main/webapp/WEB-INF/web.xml
+++ b/jinghua/dmm_person/src/main/webapp/WEB-INF/web.xml
@@ -52,25 +52,39 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 <!-- ==================== 单点登录开始 ================ -->
+<!-- 用于单点退出，该过滤器用于实现单点登出功能，可选配置 -->	
+<listener>
+		<listener-class>
+org.jasig.cas.client.session.SingleSignOutHttpSessionListener
+</listener-class>
+	</listener>
+	<!-- 该过滤器用于实现单点登出功能，可选配置。 -->
+	<filter>
+		<filter-name>CAS Single Sign Out Filter</filter-name>
+		<filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CAS Single Sign Out Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<!-- 该过滤器负责用户的认证工作，必须启用它 -->
 	<filter>
 		<filter-name>CASFilter</filter-name>
 		<filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
 		<init-param>
 			<param-name>casServerLoginUrl</param-name>
-			<param-value> http://ids.cumt.edu.cn/authserver/login</param-value>
+			<param-value>https://www.travel.com:8443/cas/login</param-value>
 			<!--这里的server是服务端的地址-->
 		</init-param>
 		<init-param>
 			<param-name>serverName</param-name>
-			<param-value>业务系统域名 </param-value>
+			<param-value>http://www.travel.com:8080</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>CASFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<!--[只需要添加获取用户姓名的对应jsp文件相对路径即可]-->
 
 	<!-- 该过滤器负责对Ticket的校验工作，必须启用它 -->
 	<filter>
@@ -79,11 +93,11 @@
 			org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
 		<init-param>
 			<param-name>casServerUrlPrefix</param-name>
-			<param-value> http://ids.cumt.edu.cn/authserver/serviceValidate</param-value>
+			<param-value>https://www.travel.com:8443/cas</param-value>
 		</init-param>
 		<init-param>
 			<param-name>serverName</param-name>
-			<param-value>业务系统域名</param-value>
+			<param-value>http://www.travel.com:8080</param-value>
 		</init-param>
 <init-param>
 			<param-name>encoding</param-name>
@@ -120,6 +134,7 @@
 	</filter-mapping>
 
 	<!-- =============== 单点登录结束 ================= -->
+
 	<jsp-config>
 		<taglib>
 			<taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
