--- a/jinghua/dmm_sys/src/main/resources/db.properties
+++ b/jinghua/dmm_sys/src/main/resources/db.properties
@@ -41,7 +41,7 @@ sys.serverUrl=http://localhost:8088/dmm_sys
 sys.casServerUrl=http://localhost:8080/dmm_cas
 
 #权限忽略拦截的路径(可以配置成正则表达式)
-sys.permissIgnoreUrls=/user/nopermi,/static/*,/cas,/logout,/casFailure.jsp,/common/*,index.jsp,/main,/user/getphoto,/common/getData,/user/changepwd/*
+sys.permissIgnoreUrls=/user/nopermi,/static/*,/cas,/logout,/casFailure.jsp,/common/*,index.jsp,/main,/user/getphoto,/common/getData,/user/changepwd,/user/changepwd/page,/user/checkuser
 
 sys.serverUrlNode=http://localhost:18080/dmm_sys
 
