--- a/YYKJ/javaWeb/jyunbang/src/main/resources/db.properties
+++ b/YYKJ/javaWeb/jyunbang/src/main/resources/db.properties
@@ -4,10 +4,10 @@ dataSource.driver.base=oracle.jdbc.driver.OracleDriver
 #dataSource.url.base=jdbc\:oracle\:thin\:@202.196.0.180\:1521\:DM
 #dataSource.username.base=usr_dmeq
 #dataSource.password.base=usr_dmeq
-dataSource.url.base=jdbc\:oracle\:thin\:@192.168.30.88\:1521\:ORCL
+dataSource.url.base=jdbc\:oracle\:thin\:@127.0.0.1\:1521\:JYUNBANG
 #dataSource.url.base=jdbc\:oracle\:thin\:@202.196.0.176\:1521\:ORCL
-dataSource.username.base=dm
-dataSource.password.base=dm
+dataSource.username.base=jyunbang
+dataSource.password.base=jyunbang
 
 #连接基础属性配置
 dataSource.maxActive=200
@@ -27,14 +27,6 @@ dataSource.removeAbandoned=true
 #泄露的连接可以被删除的超时值, 单位秒。
 dataSource.removeAbandonedTimeout=180
 
-
-#neo4j数据库连接配置
-neo4jSource.url=http://192.168.200.101:7474/db/data
-neo4jSource.username=neo4j
-neo4jSource.password=123456
-
-#solr搜索引擎配置
-solr.url=http://192.168.200.101:18088/solr/menu
 
 
 
