--- a/YYKJ/javaWeb/jyunbang/src/main/webapp/WEB-INF/web.xml
+++ b/YYKJ/javaWeb/jyunbang/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,17 @@ xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
-  <servlet>
+
+  <servlet>  
+        <servlet-name>CXFService</servlet-name>  
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>  
+    <load-on-startup>1</load-on-startup>
+    </servlet>  
+    <servlet-mapping>  
+        <servlet-name>CXFService</servlet-name>  
+        <url-pattern>/services/*</url-pattern>  
+    </servlet-mapping> 
+      <servlet>
     <servlet-name>spring</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
@@ -44,7 +54,7 @@ xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
   <servlet-mapping>
     <servlet-name>spring</servlet-name>
     <url-pattern>/</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> 
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring-mvc.xml</param-value>
@@ -64,7 +74,7 @@ xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <listener>
+<!--   <listener>
     <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
   </listener>
   <filter>
@@ -130,7 +140,7 @@ xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
   <filter-mapping>
     <filter-name>PermissUrlFilter</filter-name>
     <url-pattern>/*</url-pattern>
-  </filter-mapping>
+  </filter-mapping> -->
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
